part1/todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: images-volume
          emptyDir: {}
      containers:
        - name: todo-app
          image: velivalentine/todo-app@sha256:f87747092ec9e54460dc694dc558a1c5b2ba212ade890203731fc8d5b6fe2894
          resources:
            limits:
              memory: "300M"
              cpu: "1"
          volumeMounts:
            - name: images-volume
              mountPath: /usr/src/app/images
